--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -19,7 +19,7 @@ spring:
   #    datasource
   #log4j jdbc
   datasource:
-    url: jdbc:log4jdbc:mysql://localhost/sbjwtjpa?useUnicode=true&characterEncoding=utf-8&useSSL=false
+    url: jdbc:log4jdbc:mysql://192.168.1.222/sbjwtjpa?useUnicode=true&characterEncoding=utf-8&useSSL=false
     username: root
     password: root
     driver-class-name: net.sf.log4jdbc.DriverSpy
@@ -45,8 +45,8 @@ spring:
       properties:
         dialect: com.ld.sbjwtjpa.sys.jpa.MySQL5InnoDBDialectUtf8mb4
     #      是否打印sql
-#    show-sql: true
-#    是否格式化sql
+    #    show-sql: true
+    #    是否格式化sql
     format-sql: true
   #    是否启用aop
   aop:
@@ -78,13 +78,13 @@ databaseSavePath: D://
 file:
   model:
     path: D://
-#    健康检查
-#actuator端口
-#  management.server.port=9001
+  #    健康检查
+  #actuator端口
+  #  management.server.port=9001
   #修改访问路径  2.0之前默认是/   2.0默认是 /actuator  可以通过这个属性值修改
-#  management.endpoints.web.base-path=/monitor
+  #  management.endpoints.web.base-path=/monitor
   #开放所有页面节点  默认只开启了health、info两个节点
-#  management.endpoints.web.exposure.include=*
+  #  management.endpoints.web.exposure.include=*
   #显示健康具体信息  默认不会显示详细信息
 #  management.endpoint.health.show-details=always
 management:
@@ -93,7 +93,7 @@ management:
   endpoints:
     web:
       exposure:
-#        * 启动所有
+        #        * 启动所有
         include: "*"
     health:
       sensitive: false
