添加RestTemplate请求实例 添加logback-spring.xml虽然还未成功融合 添加jackjson序列化注解，针对于model 其它代码优化

--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -83,9 +83,11 @@ banner:
 #配置日志
 logging:
   #  默认日志格式 10M自动分割 最多存在7个文件
-  file: sbjwtjpa.log
+#  file: sbjwtjpa.log
   level:
-    com.ld.sbjwtjpa: debug
+    com.ld.sbjwtjpa: info
+#    自带的日志组属性
+    org.hibernate.SQL: debug
 
 #上传/导入文件地址
 upLoad:
